# ros_testing

./: .cproject  .project  CMakeLists.txt  direct.launch  dude.cpp  dude_plugin.xml  namespaced_differently.launch  namespaced_everything.launch  namespaced_manager.launch  nested.launch  package.xml
